* c-parse.in (string): For -Wtraditional, warn about string 	concatenation only once per line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35290 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -733,10 +733,21 @@ end ifobjc
 string:
 	  STRING
 	| string STRING
-		{ $$ = chainon ($1, $2);
+		{
 ifc
-		  if (warn_traditional && !in_system_header)
-		    warning ("Use of ANSI string concatenation");
+                  static int last_lineno = 0;
+                  static const char *last_input_filename = 0;
+end ifc
+                  $$ = chainon ($1, $2);
+ifc
+		  if (warn_traditional && !in_system_header
+		      && (lineno != last_lineno || !last_input_filename ||
+			  strcmp (last_input_filename, input_filename)))
+		    {
+		      warning ("traditional C rejects string concatenation");
+		      last_lineno = lineno;
+		      last_input_filename = input_filename;
+		    }
 end ifc
 		}
 	;
