* Makefile.in (clean-target-libgcc): Remove gcc/libgcc. (clean-target): Depend on it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35308 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/Makefile.in
+++ b/Makefile.in
@@ -1052,7 +1052,12 @@ $(CLEAN_TARGET_MODULES):
 	  true; \
 	fi
 
-clean-target: $(CLEAN_TARGET_MODULES)
+clean-target: $(CLEAN_TARGET_MODULES) clean-target-libgcc
+clean-target-libgcc:
+	test ! -d gcc/libgcc || \
+	(cd gcc/libgcc && find . -type d -print) | \
+	while read d; do rm -f gcc/$$d/libgcc.a || : ; done
+	-rm -rf gcc/libgcc
 
 # Check target.
 
