--- a/libobjc/configure.in
+++ b/libobjc/configure.in
@@ -103,13 +103,20 @@ fi])
 GTHREAD_FLAGS=$objc_cv_gthread_flags
 AC_SUBST(GTHREAD_FLAGS)
 
+# Disable shared libs by default
+AC_DISABLE_SHARED
+# Enable Win32 DLL on MS Windows - FIXME 
+AC_LIBTOOL_WIN32_DLL 
+# Use libtool
+AC_PROG_LIBTOOL
+
 AC_ARG_ENABLE(objc-gc,
 [  --enable-objc-gc       enable the use of Boehm's garbage collector with
                           the GNU Objective-C runtime.],
 if [[[ x$enable_objc_gc = xno ]]]; then
         OBJC_BOEHM_GC=''
 else
-        OBJC_BOEHM_GC=libobjc_gc.a
+        OBJC_BOEHM_GC=libobjc_gc.la
 fi,
 OBJC_BOEHM_GC='')
 AC_SUBST(OBJC_BOEHM_GC)
