* c-parse.in (extdefs): Call ggc_collect between external definitions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35367 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -296,7 +296,7 @@ program: /* empty */
 
 extdefs:
 	{$<ttype>$ = NULL_TREE; } extdef
-	| extdefs {$<ttype>$ = NULL_TREE; } extdef
+	| extdefs {$<ttype>$ = NULL_TREE; ggc_collect(); } extdef
 	;
 
 extdef:
