* Makefile.in (ssa.o): Updated header files in dependences. 	* basic-block.h: Added compute_immediate_postdominators declaration. 	* config/i386/i386.h (CONVERT_HARD_REGISTER_TO_SSA_P): Added 	definition. 	* flow.c (compute_immediate_dominators): Updated comment. 	(compute_immediate_postdominators): Added definition. 	* rtl.h (HARD_REGISTER_P): Added definition. 	* ssa.c: Include additional header files. 	(assert): Added definition. 	(ssa_rename_to_lookup): Added to reimplement ssa_rename_to to 	include select hard registers. 	(ssa_rename_to_insert): Likewise. 	(ssa_rename_from_initialize): Likewise. 	(ssa_rename_from_lookup): Likewise. 	(original_register): Likewise. 	(ssa_rename_from_insert): Added to reimplement ssa_rename_from to 	include select hard reigsters. 	(ssa_rename_from_traverse): Likewise. 	(ssa_rename_from_free): Likewise. 	(ssa_rename_from_print): Likewise. 	(ssa_rename_from_print_1): Likewise. 	(ssa_rename_from_hash_function): Likewise. 	(ssa_rename_from_equal): Likewise. 	(ssa_rename_from_delete): Likewise. 	(simplify_to_immediate_dominators): Removed in favor of 	flow.c:compute_immediate_dominators. 	(find_evaluations_1): Modified to work with hard registers. 	(insert_phi_node): Likewise. 	(insert_phi_nodes): Likewise. 	(struct rename_set_data): Updated prev_reg comment. 	(create_delayed_rename): Modified to work with hard registers. 	(RENAME_NO_RTX): Updated comment. 	(apply_delayed_renames): Modified to work with hard registers. 	(rename_insn_1): Likewise and added handling of CLOBBER rtls. 	(rename_block): Updated to use revised ssa_rename_to interface. 	(rename_registers): Updated to use revised ssa_rename_to and 	ssa_rename_from interface. 	(convert_to_ssa): Revised to use compute_immediate_dominators and 	deal with hard registers. 	(make_regs_equivalent_over_bad_edges): Modified to work with hard 	registers.  Added check for illegal unification of hard register. 	(make_equivalent_phi_alternatives_equivalent): Modified to work 	with hard regi

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1328,8 +1328,10 @@ resource.o : resource.c $(CONFIG_H) $(RTL_H) hard-reg-set.h system.h \
    $(INSN_ATTR_H) except.h
 lcm.o : lcm.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) hard-reg-set.h flags.h \
    real.h insn-config.h $(INSN_ATTR_H) $(RECOG_H) $(EXPR_H) $(BASIC_BLOCK_H)
-ssa.o : ssa.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) $(BASIC_BLOCK_H) \
-   output.h insn-config.h
+ssa.o : ssa.c $(CONFIG_H) system.h $(RTL_H) varray.h sbitmap.h		\
+   $(HASHTAB_H) $(REGS_H) hard-reg-set.h flags.h function.h real.h	\
+   insn-config.h $(RECOG_H) $(BASIC_BLOCK_H)				\
+   output.h
 conflict.o : conflict.c $(CONFIG_H) system.h $(OBSTACK_H) $(HASHTAB_H) \
    $(RTL_H) hard-reg-set.h $(BASIC_BLOCK_H)
 profile.o : profile.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) flags.h \
